--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,21 @@
 {
-  "name": "Screen Share PWA",
-  "short_name": "ScreenShare",
+  "name": "Picture in Picture",
+  "short_name": "PiP",
+  "description": "Picture-in-Picture mode for your screen",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000"
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "assets/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
