--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,23 @@
   "name": "Picture in Picture",
   "short_name": "PiP",
   "description": "Picture-in-Picture mode for your screen",
-  "start_url": "/",
+  "start_url": "/mafari10/",
+  "scope": "/mafari10/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "assets/icons/icon-192x192.png",
+      "src": "/mafari10/assets/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "assets/icons/icon-512x512.png",
+      "src": "/mafari10/assets/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
